--- a/App/Views/login.html
+++ b/App/Views/login.html
@@ -1,3 +1,95 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="container-home-menu">
+      
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand unpadding" href="#" style="padding-top: 5px; padding-left: 30px;"><img src="Public/img/Loco_Cabecera_Pequeno.png" alt="Ecolgreen" class="logotipo" style="height: 56px;"></a>
+      </div>
+
+      
+      <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="" style="font-weight: 600;font-size: 20px; color: #0094CB; height: 64px;padding-top: 22px;" data-toggle="modal" data-target="#loginOfThis">Iniciar sesi&oacute;n</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
+<section>
+  <header>
+    <div class="container" style="text-align: center"> 
+      <img src="Public/img/Logo_Portada_Index.png" alt="" style="margin: auto; margin-top: 80px; display: block;width: 70%;">
+      <span style="font-size: 49px; color: #0094CB;  font-weight: lighter; margin-bottom: 20px;">Bienvenidos a  <br/>la plataforma</span>  
+      <span style="color: #54B202 ; font-size: 49px; font-weight: 600;">Ecolred</span>
+      <p><a class="button-index" ui-sref="register">CREAR CUENTA</a></p>
+    </div>
+  </header>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="modal fade" id="loginOfThis" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document" style="  width: 460px; margin: 180px auto;">
+    <div class="modal-content" style="border: 3px solid #54B202; height: 560px; width: 460px;">
+      <div class="modal-body">
+      	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      	<div class="row" style="text-align: center;">
+      		<img src="" alt="" style="display: block;height: 170px; width: 137px; margin: auto; margin-top: 50px;">
+						<div class="col-md-12">
+							<div class="form-group">
+							    <label for="inputEmail" class="control-label" style="font-size: 20px; color:#0094CB"><translate>Correo</translate></label>
+                                <input type="email" class="form-control" id="inputEmail" placeholder="example@example.com" ng-model="user.email" required>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+                                <label for="inputPassword" class="control-label" style="font-size:20px;color:#0094CB"><trasnlate>Contraseña</trasnlate></label>
+                                <input type="password" class="form-control" id="inputPassword" ng-model="user.password" placeholder="***********" required>
+							</div>
+							<a class="" href="" style="font-size: 14px; color: #0094CB;">¿Olvidaste tu contraseña?</a>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+							    <button class="btn btn-success btn-login" ng-click="login()">Entrar</button>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+								No tienes una cuenta? <a class="link_create" ui-sref="register">Solicita una cuenta</a>
+							</div>
+						</div>
+      	</div>
+      </div>
+    </div>
+  </div>
+</div>   
+
+   
+<!--   
+   
 <div class="row">
     <div class="col-md-12">
         <form class="form-horizontal center-block" style="width: 50%; padding: 35px">
@@ -18,4 +110,4 @@
             </div>
         </form>
     </div>
-</div>
+</div>-->
