--- a/App/Public/css/index.css
+++ b/App/Public/css/index.css
@@ -19,7 +19,30 @@ html, body{
     margin:0;
     padding:0;
 }
-
+.footer-body{
+    bottom: 0; 
+    position:absolute; 
+    background-color: rgba(255,255,255,0.75); 
+    width: 100%; display: flex; 
+    vertical-align: center; 
+    height: 64px; 
+    justify-content: center;
+}
+.footer-img{
+    height: 48px; 
+    margin-top: 8px;
+}
+.footer-line{
+    height: 40px; 
+    width: 3px; 
+    background-color: #333333; 
+    margin: 12px 5px;
+}
+.footer-span{
+    font-size: 15px; 
+    color:#333333; 
+    line-height: 75px;
+}
 .container-image{
 	margin-left: auto;
 	margin-right: auto;
@@ -49,12 +72,15 @@ html, body{
   cursor: pointer;
   z-index: 15
 }
-
+.link_create:hover{
+    cursor: pointer;
+}
 header {
-      width: 100%;
-      height: 100vh;
-      background: url(../img/plantaweb.jpg) no-repeat 50% 50%;
-      background-size: cover;
+    width: 100%;
+    height: 100vh;
+    background: url(../img/plantaweb.jpg) no-repeat 50% 50%;
+    background-size: cover;
+    background-position: center
 }
  
 .navbar-brand {
@@ -107,6 +133,12 @@ header {
   text-decoration: none;
   display: inline-block;
 }
+.img-index{
+    margin: auto; 
+    margin-top: 80px; 
+    display: block;
+    width: 70%;
+}
 .image-admission-user{
   height: 100vh;
   background: url(../img/mata.jpg) no-repeat -150% 50%;
@@ -129,8 +161,69 @@ header {
   font-weight: 600;
   color: #54B202;
 }
- 
-@media(max-width: 786px) {
- 
- 
+.text-index{
+    font-size: 49px; 
+    color: #0094CB;  
+    font-weight: lighter;
+    margin-bottom: 20px;
 }
+.span-index{
+    color: #54B202; 
+    font-size: 49px; 
+    font-weight: 600;
+}
+.modal-dialog{
+    width: 460px; 
+    margin: 180px auto;
+}
+@media screen and (max-width: 1370px) {
+    .footer-body{ 
+        height: 44px; 
+        justify-content: center;
+    }
+    .footer-img{
+        height: 36px; 
+        margin-top: 4px;
+    }
+    .footer-line{
+        height: 28px; 
+        width: 3px; 
+        background-color: #333333; 
+        margin: 11px 5px 5px 5px;
+    }
+    .footer-span{
+        font-size: 15px; 
+        line-height: 52px;
+    }
+    .button-index, .button-index:hover, .button-index:focus, .button-index:active {
+        font-size: 25px;
+        padding: 7px 11px;
+        color: #ffffff;
+        border-color: #54B202;
+        font-weight: 600;
+        margin-top: 40px;
+    }
+    .img-index{
+        margin-top: 80px; 
+        width: 60%;
+    }
+    .text-index{
+        font-size: 35px; 
+    }
+    .span-index{
+        font-size: 35px;
+    }
+    .modal-dialog{
+        width: 350px; 
+        margin: 40px auto;
+    }
+}
+
+
+
+
+
+
+
+
+
