--- a/App/Public/css/index.css
+++ b/App/Public/css/index.css
@@ -75,6 +75,15 @@ html, body{
 .link_create:hover{
     cursor: pointer;
 }
+.back{
+  color: #54B202;
+  font-size: 15px;
+}
+.back:hover{
+  color: #54B202;
+  text-decoration: none;
+  cursor: pointer;
+}
 header {
     width: 100%;
     height: 100vh;
@@ -115,10 +124,13 @@ header {
   text-align: center;
 }
 .btn-login, .btn-login:active,.btn-login:focus,.btn-login:hover{
-  font-size: 20px; 
+  font-size: 15px; 
+  font-weight: 600;
   color: #ffffff;
   border-radius: 5px;
   background-color: #54B202;
+  display: block;
+  margin: auto;
   margin-top: 40px;
 }
 .button-index, .button-index:hover, .button-index:focus, .button-index:active {
@@ -145,7 +157,7 @@ header {
   background-size: cover;
 }
 .input-admission{
-  color: #54B202;
+  color: #575C60;
   font-synthesis: 16px;
   font-weight: 100;
   border-color: transparent;
@@ -154,7 +166,7 @@ header {
   border-radius: 0px;
 }
 .input-admission::placeholder{
-  color: #54B202;
+  color: #575C60;
 }
 .label-admission{
   font-size: 15px;
@@ -176,6 +188,15 @@ header {
     width: 460px; 
     margin: 180px auto;
 }
+.create-account{
+  font-size: 30px; 
+  color: #54B202;
+  font-weight: 600;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  display: block;
+}
+
 @media screen and (max-width: 1370px) {
     .footer-body{ 
         height: 44px; 
