--- a/App/Public/css/index.css
+++ b/App/Public/css/index.css
@@ -21,7 +21,7 @@ html, body{
 }
 .footer-body{
     bottom: 0; 
-    position:absolute; 
+    position: fixed; 
     background-color: rgba(255,255,255,0.75); 
     width: 100%; display: flex; 
     vertical-align: center; 
