redireccion de register

--- a/App/Views/login.html
+++ b/App/Views/login.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    No tienes una cuenta? <a class="link_create" data-dismiss="modal" onclick="javascript:window.location='index.html#!/register'" >Solicita una cuenta</a>
+                    No tienes una cuenta? <a class="link_create" ng-click='redirect()'>Solicita una cuenta</a>
                 </div>
             </div>
       	</div>
