Configuración de rutas, (autenticación sin funcionar)

--- a/App/Views/login/register.html
+++ b/App/Views/login/register.html
@@ -1,25 +1,3 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="container-home-menu">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand unpadding" href="#" style="padding-top: 5px; padding-left: 30px;"><img src="Public/img/Loco_Cabecera_Pequeno.png" alt="Ecolgreen" class="logotipo" style="height: 56px;"></a>
-      </div>
-
-
-      <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="" style="font-weight: 600;font-size: 20px; color: #0094CB; height: 64px;padding-top: 22px;" data-toggle="modal" data-target="#login">Iniciar sesi&oacute;n</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</nav>
 <section class="image-admission-user">
 		<div class="col-md-6" style="background-color: #ffffff;height: 100vh;padding: 0px;padding-top: 75px;">
 			<div class="col-md-8 col-md-offset-4">
@@ -119,45 +97,13 @@
                             
                             <div class="col-md-12">
                                <div class="form-group">
-                                <a class="back" ui-sref="login">volver</a>
+                                <a class="back" ui-sref="index.login">volver</a>
                               </div>
                             </div>
                         </form>
                     </div>
-
 		</div>
 		<div class="col-md-6">
 			<p><img src="Public/img/Logo_Vertical_Registro.png" alt="" style="margin: auto; margin-top: 180px;width: 430px; height: auto; display: block;"></p>
 		</div>
 </section>
-   
-
-<!--<div class="row">
-    <div class="col-md-12">
-        <form class="form-horizontal center-block" style="width: 50%; padding: 35px">
-            <h2 class="text-center">Formulario registro</h2>
-            <div class="form-group">
-                <label for="inputName" class="control-label"><translate>Nombre</translate></label>
-                <input type="text" class="form-control" id="inputName" placeholder="Nombre" ng-model="user.name">
-            </div>
-            <div class="form-group">
-                <label for="inputEmail" class="control-label"><translate>Correo</translate></label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="example@example.com" ng-model="user.email">
-            </div>
-            <div class="form-group">
-                <label for="inputPassword" class="control-label"><trasnlate>Contraseña</trasnlate></label>
-                <input type="password" class="form-control" id="inputPassword" ng-model="user.password" placeholder="***********">
-            </div>
-            <div class="form-group">
-                <label for="inputConfirmPassword" class="control-label"><trasnlate>Confirmar Contraseña</trasnlate></label>
-                <input type="password" class="form-control" id="inputConfirmPassword" ng-model="user.confirmpassword" placeholder="***********">
-            </div>
-            <div class="form-group">
-                <button class="btn btn-success btn-block center-block " style="width: 50%;" ng-click="register()">Registrar</button>
-            </div>
-            <div>
-                <a class="link_create" ui-sref="login">volver</a>
-            </div>
-        </form>
-    </div>
-</div>-->
