--- a/App/Public/css/common.css
+++ b/App/Public/css/common.css
@@ -9,6 +9,30 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
+.dropdown-menu{
+  top: 105%;
+}
+.dropdown-menu::before {
+  position: absolute;
+  top: -7px;
+  right: 17px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #CCC;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: '';
+}
+.dropdown-menu::after {
+  position: absolute;
+  top: -6px;
+  right: 18px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid white;
+  border-left: 6px solid transparent;
+  content: '';
+}
 @media (min-width: 1300px){
   .container {
       width: 1270px;
