--- a/App/Public/css/index.css
+++ b/App/Public/css/index.css
@@ -196,6 +196,10 @@ header {
   padding-bottom: 30px;
   display: block;
 }
+.container-nick:hover { 
+  background-color: #fff !important;
+  cursor: default;
+}
 
 @media screen and (max-width: 1370px) {
     .footer-body{ 
