--- a/App/Views/main.html
+++ b/App/Views/main.html
@@ -1,94 +1,120 @@
-<div class="row">
-   <div class="col-md-2">
-       <nav>
-           <ul class="nav nav-pills nav-stacked">
-                <li role="presentation">
-                   <a type="button" class="btn btn-primary btn-menu" data-toggle="modal" data-target="#User">
-                       {{name}}
-                   </a>
-                </li>
-                <li role=presentation>
-                    <a ng-click="showParameter = 1"><translate>Temperatura ambiente</translate></a>
-                </li>
-                <li role="presentation">
-                    <a ng-click="showParameter = 2"><translate>Humedad relativa</translate></a>
-                </li>
-                <li role="presentation">
-                    <a ng-click="showParameter = 3"><translate>Ph</translate></a>
-                </li>
-                <li role="presentation">
-                    <a ng-click="showParameter = 4"><translate>Electroconductividad</translate></a>
-                </li>
-                <li role="presentation">
-                    <a ng-click="showParameter = 5"><translate>Temperatura del agua</translate></a>
-                </li>
-                <li role="presentation">
-                    <a ng-click="showParameter = 6"><translate>Oxigeno en el agua</translate></a>
-                </li>
-                <li role="presentation">
-                    <a ng-click="logout()"><translate>Salida</translate></a>
-                </li>
-            </ul> 
-       </nav>
-   </div>
-   <div class="col-md-10">
-        <div ng-show="showParameter == 0">
-             <button class="btn btn-success" ng-click="ramdom()">
-                 Ramdomize data
-             </button>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="container-home-menu">
+      
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand unpadding" href="#" style="padding-top: 5px; padding-left: 30px;"><img src="Public/img/Loco_Cabecera_Pequeno.png" alt="Ecolgreen" class="logotipo" style="height: 56px;"></a>
+      </div>
+      <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <div class="btn-group" role="group">
+             <img src="Public/img/Foto_De_Perfil.png" alt="{{name}}" style="height: 50px;border-radius: 50%;margin-top: 8px;cursor: pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-click="funsions">
+              <ul class="dropdown-menu dropdown-menu-right">
+                <li><a style="color: #000;font-weight: 600;" class="container-nick" >{{name}} <br><span style="font-weight: 100; font-size: 10px;">{{user.email}}</span></a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="" data-toggle="modal" data-target="#User">Perfil</a></li>
+                <li><a href="" ng-click="logout()">Salir</a></li>
+              </ul>
+            </div>
+         </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
+ <div class="col-xs-12" style="padding-top: 70px; ">
+  <div class="row">
+     <div class="col-md-2">
+         <nav>
+             <ul class="nav nav-pills nav-stacked">
+                  <li role=presentation>
+                      <a ng-click="showParameter = 1"><translate>Temperatura ambiente</translate></a>
+                  </li>
+                  <li role="presentation">
+                      <a ng-click="showParameter = 2"><translate>Humedad relativa</translate></a>
+                  </li>
+                  <li role="presentation">
+                      <a ng-click="showParameter = 3"><translate>Ph</translate></a>
+                  </li>
+                  <li role="presentation">
+                      <a ng-click="showParameter = 4"><translate>Electroconductividad</translate></a>
+                  </li>
+                  <li role="presentation">
+                      <a ng-click="showParameter = 5"><translate>Temperatura del agua</translate></a>
+                  </li>
+                  <li role="presentation">
+                      <a ng-click="showParameter = 6"><translate>Oxigeno en el agua</translate></a>
+                  </li>
+              </ul> 
+         </nav>
+     </div>
+     <div class="col-md-10">
+          <div ng-show="showParameter == 0">
+               <button class="btn btn-success" ng-click="ramdom()">
+                   Ramdomize data
+               </button>
+          </div>
+        <div ng-show="showParameter == 1">
+            <parametros name="Temperatura ambiente"></parametros>
         </div>
-      <div ng-show="showParameter == 1">
-          <parametros name="Temperatura ambiente"></parametros>
+        <div ng-show="showParameter == 2">
+            <parametros name="Humedad relativa"></parametros>
+        </div>
+        <div ng-show="showParameter == 3">
+            <parametros name="ph"></parametros>
+        </div>
+        <div ng-show="showParameter == 4">
+            <parametros name="Electroconductividad"></parametros>
+        </div>
+        <div ng-show="showParameter == 5">
+            <parametros name="Temperatura del agua"></parametros>
+        </div>
+        <div ng-show="showParameter == 6">
+            <parametros name="Oxigeno en el agua"></parametros>
+        </div>
+     </div>
+  </div>
+  <div class="row">
+      <div class="col-md-4">
+          <div class="chart-container">
+              <canvas id="BarChart" style="width: 100%"></canvas>
+          </div>
       </div>
-      <div ng-show="showParameter == 2">
-          <parametros name="Humedad relativa"></parametros>
+      <div class="col-md-4">
+          <div class="chart-container">
+              <canvas id="LineChart"></canvas>
+          </div>
       </div>
-      <div ng-show="showParameter == 3">
-          <parametros name="ph"></parametros>
+      <div class="col-md-4">
+          <div class="chart-container">
+              <canvas id="AreaChart"></canvas>
+          </div>
       </div>
-      <div ng-show="showParameter == 4">
-          <parametros name="Electroconductividad"></parametros>
+      <div class="col-md-4">
+          <div class="chart-container">
+              <canvas id="PieChart"></canvas>
+          </div>
       </div>
-      <div ng-show="showParameter == 5">
-          <parametros name="Temperatura del agua"></parametros>
+      <div class="col-md-4">
+          <div class="chart-container">
+              <canvas id="PolarChart"></canvas>
+          </div>
       </div>
-      <div ng-show="showParameter == 6">
-          <parametros name="Oxigeno en el agua"></parametros>
+      <div class="col-md-4">
+          <div class="chart-container">
+              <canvas id="DonaChart"></canvas>
+          </div>
       </div>
-   </div>
+  </div>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <div class="chart-container">
-            <canvas id="BarChart" style="width: 100%"></canvas>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="chart-container">
-            <canvas id="LineChart"></canvas>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="chart-container">
-            <canvas id="AreaChart"></canvas>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="chart-container">
-            <canvas id="PieChart"></canvas>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="chart-container">
-            <canvas id="PolarChart"></canvas>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="chart-container">
-            <canvas id="DonaChart"></canvas>
-        </div>
-    </div>
-</div>
+  
 
 
 <!-- Modal -->
@@ -96,10 +122,11 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="ModalLabel">Datos del usuario</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
+                <h5 class="modal-title" id="ModalLabel">Datos del usuario</h5>
+                
             </div>
             <div class="modal-body">
                 <form>
