icono de pestaña y arreglos register para movil

--- a/App/Views/login/register.html
+++ b/App/Views/login/register.html
@@ -1,6 +1,6 @@
 <section class="image-admission-user">
 		<div class="col-md-6" style="background-color: #ffffff;height: 100vh;padding: 0px;padding-top: 75px;">
-			<div class="col-md-8 col-md-offset-4">
+			<div class="col-md-8 col-md-offset-4" style="padding-bottom: 40px">
 				<div class="col-md-12"><span class="create-account">Crea tu cuenta</span></div>
 				<!--espacio para colocar el formulario-->
                         <form style="" ng-submit="register()">
@@ -105,7 +105,7 @@
                         </form>
                     </div>
 		</div>
-		<div class="col-md-6">
-			<p><img src="App/Public/img/Logo_Vertical_Registro.png" alt="" style="margin: auto; margin-top: 180px;width: 430px; height: auto; display: block;"></p>
+		<div class="col-md-6" style="padding-bottom: 40px;">
+			<p><img class="hidden-xs" src="App/Public/img/Logo_Vertical_Registro.png" alt="" style="margin: auto; margin-top: 180px;width: 430px; height: auto; display: block;"></p>
 		</div>
 </section>
