--- a/App/Views/Parameters/relative_humidity.html
+++ b/App/Views/Parameters/relative_humidity.html
@@ -3,10 +3,16 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <input type="date" ng-model="search.date">
-        <button type="button" class="btn btn-default" aria-label="Left Align">
-            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        </button>
+      <div class='col-xs-6'>
+         <div class="form-group">
+            <div class='input-group date' id="datepickerRelativeHumidity" >
+               <input type='text' ng-model="search.date" class="col-xs-12 form-control"/>
+               <span class="input-group-addon">
+                  <i class="fa fa-calendar"></i>
+               </span>
+            </div>
+         </div>
+      </div>
     </div>
 </div>
 <div class="row">
